Tidied some order dashboard templates

--- a/oscar/templates/dashboard/orders/line_detail.html
+++ b/oscar/templates/dashboard/orders/line_detail.html
@@ -5,6 +5,24 @@
 Order {{ order.number }} - Line #{{ line.id }} | {{ block.super }}
 {% endblock %}
 
+{% block breadcrumbs %}
+<ul class="breadcrumb">
+    <li>
+        <a href="{% url dashboard:index %}">Dashboard</a>
+        <span class="divider">/</span>
+    </li>
+    <li>
+        <a href="{% url dashboard:order-list %}">Orders</a>
+        <span class="divider">/</span>
+    </li>
+    <li>
+		<a href="{% url dashboard:order-detail order.number %}">{{ order.number }}</a>
+        <span class="divider">/</span>
+    </li>
+	<li class="active"><a href=".">Line #{{ line.id }}</a></li>
+</ul>
+{% endblock %}
+
 {% block header %}
 <div class="page-header">
     <h1>Order {{ order.number }} - Line #{{ line.id }}</h1>
