--- a/oscar/templates/customer/profile.html
+++ b/oscar/templates/customer/profile.html
@@ -40,10 +40,6 @@ My account | {{ block.super }}
 			<table class="table table-striped table-bordered">
 				<tbody>
 					<tr>
-						<th>Username</th>
-						<td>{{ request.user.username }}</td>
-					</tr>
-					<tr>
 						<th>Name</th>
 						<td>{{ request.user.get_full_name|default:'-' }}</td>
 					</tr>
@@ -51,6 +47,12 @@ My account | {{ block.super }}
 						<th>Email address</th>
 						<td>{{ user.email }}</td>
 					</tr>
+					{% for field in profile_fields %}
+					<tr>
+						<th>{{ field.name }}</th>
+						<td>{{ field.value|default:"-" }}</td>
+					</tr>
+					{% endfor %}
 					<tr>
 						<th>Date registered</th>
 						<td>{{ user.date_joined }}</td>
@@ -58,7 +60,7 @@ My account | {{ block.super }}
 					<tr>
 						<th></th>
 						<td>
-							<a href="" class="btn btn-primary">Edit profile</a>
+							<a href="{% url customer:profile-update %}" class="btn btn-primary">Edit profile</a>
 							<a href="{% url customer:change-password %}" class="btn btn-danger">Change password</a>
 						</td>
 					</tr>
