--- a/oscar/templates/dashboard/index.html
+++ b/oscar/templates/dashboard/index.html
@@ -27,35 +27,99 @@
         <input type="submit" value="Filter result" class="btn primary" />
     </form>
 </div>
-<table class="table table-striped table-bordered">
-	<caption>Global stats</caption>
-	<tr>
-		<th>Total orders</th>
-		<td>{{ total_orders }}</td>
-	</tr>
-	<tr>
-		<th>Total lines</th>
-		<td>{{ total_lines }}</td>
-	</tr>
-	<tr>
-		<th>Total revenue</th>
-		<td>{{ total_revenue|currency }}</td>
-	</tr>
-</table>
 
-{% if order_status_breakdown %}
-<table class="table table-striped table-bordered">
-	<caption>Order status breakdown</caption>
-	<tr>
-		<th>Status</th>
-		<th>Frequency</th>
-	</tr>
-	{% for dict in order_status_breakdown %}
-	<tr>
-		<td><a href="{% url dashboard:order-list %}?order_status={{ dict.status }}">{{ dict.status }}</a></td>
-		<td>{{ dict.freq }}</td>
-	</tr>
-	{% endfor %}
-</table>
-{% endif %}
+<div class='row-fluid'>
+    <div class="span6">
+        <table class="table table-striped table-bordered">
+                <caption>Global order stats</caption>
+                <tr>
+                        <th class="span10">Total orders</th>
+                        <td class="span2" >{{ total_orders }}</td>
+                </tr>
+                <tr>
+                        <th class="span10">Total lines</th>
+                        <td class="span2" >{{ total_lines }}</td>
+                </tr>
+                <tr>
+                        <th class="span10">Total revenue</th>
+                        <td class="span2" >{{ total_revenue|currency }}</td>
+                </tr>
+        </table>
+
+        {% if order_status_breakdown %}
+        <table class="table table-striped table-bordered">
+                <caption>Order status breakdown</caption>
+                <tr>
+                        <th class="span10">Status</th>
+                        <th class="span2" >Frequency</th>
+                </tr>
+                {% for dict in order_status_breakdown %}
+                <tr>
+                        <td class="span10"><a href="{% url dashboard:order-list %}?order_status={{ dict.status }}">{{ dict.status }}</a></td>
+                        <td class="span2" >{{ dict.freq }}</td>
+                </tr>
+                {% endfor %}
+        </table>
+        {% endif %}
+    </div>
+
+    <div class="span6">
+        <table class="table table-striped table-bordered">
+                <caption>Global stock stats</caption>
+                <tr>
+                        <th class="span10">Total products</th>
+                        <td class="span2" >{{ total_products }}</td>
+                </tr>
+                <tr>
+                        <th class="span10"><em>Open</em> stock alerts</th>
+                        <td class="span2" >{{ total_open_stock_alerts }}</td>
+                </tr>
+                <tr>
+                        <th class="span10"><em>Closed</em> stock alerts</th>
+                        <td class="span2" >{{ total_closed_stock_alerts }}</td>
+                </tr>
+        </table>
+
+        <table class="table table-striped table-bordered">
+                <caption>Global offer stats</caption>
+                <tr>
+                    <th class="span10"><em>Current</em> Offers/Promotions</th>
+                    <td class="span2" >{{ total_current_offers }}</td>
+                </tr>
+                {% comment %}
+                <tr>
+                    <th class="span10"><em>Expired</em> Offers/Promotions</th>
+                    <td class="span2">{{ total_expired_offers }}</td>
+                </tr>
+                {% endcomment %}
+                <tr><th colspan="2">Conditions</th></tr>
+                <tr>
+                    <td colspan='2'>
+                        <table class="table table-striped table-bordered">
+                            {% for name,conditions in total_current_conditions.items %} 
+                            <tr>
+                                <th class="span10"><em>{{ name }}</em> conditions</th>
+                                <td class="span2" >{{ conditions.count }}</td>
+                            </tr>
+                            {% endfor %}
+                        </table>
+                    </td>
+                </tr>
+                <tr><th colspan="2">Benefits</th></tr>
+                <tr>
+                    <td colspan='2'>
+                        <table class="table table-striped table-bordered">
+                            {% for name,benefits in total_current_benefits.items %} 
+                            <tr>
+                                <th class="span10"><em>{{ name }}</em> benefits</th>
+                                <td class="span2" >{{ benefits.count }}</td>
+                            </tr>
+                            {% endfor %}
+                        </table>
+                    </td>
+                </tr>
+        </table>
+    </div>
+</div> 
+
 {% endblock %}
