Tided JS - now using correct naming conventions

--- a/oscar/templates/dashboard/orders/order_detail.html
+++ b/oscar/templates/dashboard/orders/order_detail.html
@@ -505,5 +505,5 @@ Order {{ order.number }} | {{ block.super }}
 
 
 {% block onbodyload %}
-oscar.dashboard.orders.init_tabs();
+oscar.dashboard.orders.initTabs();
 {% endblock %}
