--- a/oscar/templates/dashboard/index.html
+++ b/oscar/templates/dashboard/index.html
@@ -3,6 +3,10 @@
 
 {% block body_class %}orders{% endblock %}
 
+{% block extrahead %} 
+<link rel="stylesheet" href="{{ STATIC_URL }}oscar/csschart.css"/>
+{% endblock %}
+
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
@@ -29,7 +33,50 @@
 </div>
 
 <div class='row-fluid'>
+    <div class="span10">
+        <div id="order-graph">
+            {# line graph or bar graph #}
+            <ul class='yAxis'>
+            {% for y_value in bar_chart_data.y_range %}
+                <li><span>{{ y_value|currency }}</span></li>
+            {% endfor %}
+            </ul>
+            <dl id='csschart'> 
+                {% for item in bar_chart_data.order_total_per_hour %}
+                    <dd>
+                        <em>{{ item.end_time|date:"G" }}:00</em>
+                        <span style="height: {{ item.percentage }}%;" >
+                                <b {% if item.percentage == 0 %} style="display: none;"{% endif %}>{{ item.total_incl_tax|currency }}</b>
+                        </span>
+                    </dd>
+                {% endfor %}
+            </dl>
+        </div>
+    </div>
+</div>
+
+<div class='row-fluid'>
     <div class="span6">
+        <table class="table table-striped table-bordered">
+                <caption>Order stats for last 24 hours</caption>
+                <tr>
+                        <th class="span10">Total orders</th>
+                        <td class="span2" >{{ total_orders_last_day }}</td>
+                </tr>
+                <tr>
+                        <th class="span10">Total lines</th>
+                        <td class="span2" >{{ total_lines_last_day }}</td>
+                </tr>
+                <tr>
+                        <th class="span10">Total revenue</th>
+                        <td class="span2" >{{ total_revenue_last_day|currency }}</td>
+                </tr>
+                <tr>
+                        <th class="span10">Average order costs</th>
+                        <td class="span2" >{{ average_order_costs|currency }}</td>
+                </tr>
+        </table>
+
         <table class="table table-striped table-bordered">
                 <caption>Global order stats</caption>
                 <tr>
@@ -81,43 +128,15 @@
         </table>
 
         <table class="table table-striped table-bordered">
-                <caption>Global offer stats</caption>
-                <tr>
-                    <th class="span10"><em>Current</em> Offers/Promotions</th>
-                    <td class="span2" >{{ total_current_offers }}</td>
-                </tr>
-                {% comment %}
-                <tr>
-                    <th class="span10"><em>Expired</em> Offers/Promotions</th>
-                    <td class="span2">{{ total_expired_offers }}</td>
-                </tr>
-                {% endcomment %}
-                <tr><th colspan="2">Conditions</th></tr>
-                <tr>
-                    <td colspan='2'>
-                        <table class="table table-striped table-bordered">
-                            {% for name,conditions in total_current_conditions.items %} 
-                            <tr>
-                                <th class="span10"><em>{{ name }}</em> conditions</th>
-                                <td class="span2" >{{ conditions.count }}</td>
-                            </tr>
-                            {% endfor %}
-                        </table>
-                    </td>
-                </tr>
-                <tr><th colspan="2">Benefits</th></tr>
-                <tr>
-                    <td colspan='2'>
-                        <table class="table table-striped table-bordered">
-                            {% for name,benefits in total_current_benefits.items %} 
-                            <tr>
-                                <th class="span10"><em>{{ name }}</em> benefits</th>
-                                <td class="span2" >{{ benefits.count }}</td>
-                            </tr>
-                            {% endfor %}
-                        </table>
-                    </td>
-                </tr>
+            <caption>Global offer stats</caption>
+            <tr>
+                <th class="span10">Active <em>Site</em> Offers</th>
+                <td class="span2" >{{ total_site_offers }}</td>
+            </tr>
+            <tr>
+                <th class="span10">Active <em>Vouchers</em></th>
+                <td class="span2" >{{ total_vouchers }}</td>
+            </tr>
         </table>
     </div>
 </div> 
