--- a/oscar/templates/dashboard/offers/condition_form.html
+++ b/oscar/templates/dashboard/offers/condition_form.html
@@ -1,39 +1,9 @@
-{% extends 'dashboard/layout.html' %}
-{% load currency_filters %}
+{% extends 'dashboard/offers/step_form.html' %}
 
-{% block title %}
-Create new offer | Offer management | {{ block.super }}
-{% endblock %}
-
-{% block breadcrumbs %}
-<ul class="breadcrumb">
-    <li>
-        <a href="{% url dashboard:index %}">Dashboard</a>
-        <span class="divider">/</span>
-    </li>
-    <li>
-        <a href="{% url dashboard:offer-list %}">Offers</a>
-        <span class="divider">/</span>
-    </li>
-    <li class="active"><a href=".">Create new offer</a></li>
-</ul>
-{% endblock %}
-
-{% block header %}
-<div class="page-header">
-    <h1>Create new offer</h1>
+{% block form_actions %}
+<div class="form-actions">
+	<a href="{% url dashboard:offer-metadata pk %}" class="btn btn-primary">Back</a> or
+	<button class="btn btn-primary" type="submit">Continue</button> or
+	<a href="{% url dashboard:page-list %}">cancel</a>
 </div>
-{% endblock header %}
-
-{% block dashboard_content %}
-<form action="." method="post" class="_form-horizontal">
-	{% csrf_token %}
-	<legend>Condition</legend>
-	{% include "partials/form_fields.html" with form=form %}
-	<div class="form-actions">
-		<a href="{% url dashboard:offer-metadata pk %}" class="btn btn-primary">Back to previous step</a> or
-		<button class="btn btn-primary" type="submit">Save and continue</button> or
-		<a href="{% url dashboard:page-list %}">cancel</a>
-	</div>
-</form>
-{% endblock dashboard_content %}
+{% endblock form_actions %}
