--- a/oscar/templates/dashboard/offers/metadata_form.html
+++ b/oscar/templates/dashboard/offers/metadata_form.html
@@ -1,38 +1,8 @@
-{% extends 'dashboard/layout.html' %}
-{% load currency_filters %}
+{% extends 'dashboard/offers/step_form.html' %}
 
-{% block title %}
-Create new offer | Offer management | {{ block.super }}
-{% endblock %}
-
-{% block breadcrumbs %}
-<ul class="breadcrumb">
-    <li>
-        <a href="{% url dashboard:index %}">Dashboard</a>
-        <span class="divider">/</span>
-    </li>
-    <li>
-        <a href="{% url dashboard:offer-list %}">Offers</a>
-        <span class="divider">/</span>
-    </li>
-    <li class="active"><a href=".">Create new offer</a></li>
-</ul>
-{% endblock %}
-
-{% block header %}
-<div class="page-header">
-    <h1>Create new offer</h1>
-</div>
-{% endblock header %}
-
-{% block dashboard_content %}
-<form action="." method="post" class="_form-horizontal">
-	{% csrf_token %}
-	<legend>Metadata</legend>
-	{% include "partials/form_fields.html" with form=form %}
+{% block form_actions %}
 	<div class="form-actions">
 		<button class="btn btn-primary" type="submit">Save and continue</button> or
 		<a href="{% url dashboard:offer-list %}">cancel</a>
 	</div>
-</form>
-{% endblock dashboard_content %}
+{% endblock %}
