--- a/oscar/templates/dashboard/offers/preview.html
+++ b/oscar/templates/dashboard/offers/preview.html
@@ -15,7 +15,9 @@
 
 {% block form_actions %}
 	<div class="form-actions">
-		<a href="{% url dashboard:offer-benefit pk %}" class="btn btn-primary">Back</a> or
+		{% if back_url %}
+		<a href="{{ back_url }}" class="btn btn-primary">Back</a> or
+		{% endif %}
 		<button class="btn btn-success btn-large" type="submit">Save</button> or
 		<a href="{% url dashboard:page-list %}">cancel</a>
 	</div>
