--- a/oscar/templates/dashboard/offers/step_form.html
+++ b/oscar/templates/dashboard/offers/step_form.html
@@ -32,7 +32,9 @@
 	{% block form_extradata %}{% endblock %}
 	{% block form_actions %}
 	<div class="form-actions">
-		<a href="{% url dashboard:offer-metadata pk %}" class="btn btn-primary">Back</a> or
+		{% if back_url %}
+		<a href="{{ back_url }}" class="btn btn-primary">Back</a> or
+		{% endif %}
 		<button class="btn btn-primary" type="submit">Continue</button> or
 		<a href="{% url dashboard:page-list %}">cancel</a>
 	</div>
