--- a/oscar/templates/dashboard/offers/offer_delete.html
+++ b/oscar/templates/dashboard/offers/offer_delete.html
@@ -2,7 +2,7 @@
 {% load currency_filters %}
 
 {% block title %}
-{{ title }} | Offer management | {{ block.super }}
+Delete offer #{{ offer.id }}? | Offer management | {{ block.super }}
 {% endblock %}
 
 {% block breadcrumbs %}
@@ -15,29 +15,34 @@
         <a href="{% url dashboard:offer-list %}">Offers</a>
         <span class="divider">/</span>
     </li>
-	<li class="active"><a href=".">{{ title }}</a></li>
+	<li class="active"><a href=".">Delete offer #{{ offer.id }}?</a></li>
 </ul>
 {% endblock %}
 
 {% block header %}
 <div class="page-header">
-	<h1>{{ title }}</h1>
+	<h1>Delete offer #{{ offer.id }}?</h1>
 </div>
 {% endblock header %}
 
 {% block dashboard_content %}
 <form action="." method="post" class="">
 	{% csrf_token %}
-	{% include "partials/form_fields.html" with form=form %}
-	{% block form_extradata %}{% endblock %}
-	{% block form_actions %}
+
+	<table class="table">
+		<tbody>
+			<tr><th>Name</th><td>{{ offer.name }}</td></tr>
+			<tr><th>Description</th><td>{{ offer.description }}</td></tr>
+			<tr><th>Start date</th><td>{{ offer.start_date }}</td></tr>
+			<tr><th>End date</th><td>{{ offer.end_date }}</td></tr>
+			<tr><th>Condition </th><td>{{ offer.condition.description }}</td></tr>
+			<tr><th>Benefit</th><td>{{ offer.benefit.description }}</td></tr>
+		</tbody>
+	</table>
+
 	<div class="form-actions">
-		{% if back_url %}
-		<a href="{{ back_url }}" class="btn btn-primary">Back</a> or
-		{% endif %}
-		<button class="btn btn-primary" type="submit">Continue</button> or
+		<button class="btn btn-primary" type="submit">Delete</button> or
 		<a href="{% url dashboard:offer-list %}">cancel</a>
 	</div>
-	{% endblock form_actions %}
 </form>
 {% endblock dashboard_content %}
