--- a/oscar/static/oscar/less/dashboard/dashboard.less
+++ b/oscar/static/oscar/less/dashboard/dashboard.less
@@ -3,8 +3,8 @@
 // Unique Fonts
 @import url("snowcone.css");
 // Core variables and mixins separate from frontend variables and mixins
-@import "variables.less"; // Modify this for custom colors, font-sizes, etc
-@import "mixins.less";
+@import "variables"; // Modify this for custom colors, font-sizes, etc
+@import "mixins";
 
 // OSCAR DASHBOARD UNIQUE STYLES
 // -----------
@@ -325,4 +325,100 @@ h3 {
 .well-blank {
   background-color: @white;
   border-color: rgba(0,0,0,.1);
+}
+/* styles related to dashboard graph */
+#order-graph {
+    position: relative;
+    margin-bottom: 5em;
+    width: 99%;
+    height: @graphHeight;
+}
+.bar-caption{
+    position: absolute;
+    color: @grayLight;
+    text-align: center;
+    opacity: 0.4;
+    top: 50%;
+    left: 50%;
+}
+.bar-y-axis{
+    position: absolute;
+    top: 16px;
+    width: 5em;
+    margin: 0;
+    padding: 0;
+    float: left;
+    display: inline;
+}
+.bar-y-axis li{
+    list-style:none;
+    height: @graphSegmentsHeight;
+    float: right;
+}
+.bar-chart, .bar-chart dt, .bar-chart dd{
+    margin:0;
+    padding:0;
+}
+.bar-chart{
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 99%;
+    height: @barHeight;
+    padding-left: 5em;
+}
+.bar-chart dd{
+    position: relative;
+    float: left;
+    width: @barWidth;
+    height: @graphHeight;
+    margin-top: 22px;
+}
+.bar-chart dd em{
+    position: absolute;
+    bottom: -2em;
+    right: 0;
+}
+.bar-chart span{
+    position: absolute;
+    display: block;
+    width: 90%;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    color: @gray;
+    text-align: center;
+    text-decoration: none;
+}
+.bar-chart span p{
+    position: relative;
+    top: 1em;
+    display: inline;
+    padding: 3px;
+    color: @grayDark;
+    z-index: 2;
+    background-color: @white;
+    font-weight: bold;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -khtml-border-radius: 3px;
+    border-radius: 3px;
+}
+.bar-layer:hover span p {
+}
+.bar-chart span{
+    height: 50%;
+    background: #87e0fd; /* Old browsers */
+    background: -moz-linear-gradient(-45deg, #87e0fd 0%, #53cbf1 40%, #05abe0 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#87e0fd), color-stop(40%,#53cbf1), color-stop(100%,#05abe0)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(-45deg, #87e0fd 0%,#53cbf1 40%,#05abe0 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(-45deg, #87e0fd 0%,#53cbf1 40%,#05abe0 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(-45deg, #87e0fd 0%,#53cbf1 40%,#05abe0 100%); /* IE10+ */
+    background: linear-gradient(-45deg, #87e0fd 0%,#53cbf1 40%,#05abe0 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#87e0fd', endColorstr='#05abe0',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -khtml-border-radius: 5px;
+    border-radius: 5px;
 }
