--- a/oscar/templates/dashboard/index.html
+++ b/oscar/templates/dashboard/index.html
@@ -20,12 +20,9 @@
 {% endblock %}
 
 {% block dashboard_content %}
-<div class="well well-info">
-    <form method="get" action="{% url dashboard:index %}" class="form-inline">
-        <h3 class="app-ico ico_magnify icon">Filter</h3>
-        {% include "partials/form_fields_inline.html" with form=form %}
-        <input type="submit" value="Filter result" class="btn primary" />
-    </form>
+
+<div class="sub-header">
+	<h2>Last 24 hours</h2>
 </div>
 
 <div class='row-fluid'>
@@ -74,9 +71,17 @@
                         <td class="span2" >{{ average_order_costs|currency }}</td>
                 </tr>
         </table>
+	</div>
+</div>
 
+<div class="sub-header">
+	<h2>All time</h2>
+</div>
+
+<div class='row-fluid'>
+    <div class="span6">
         <table class="table table-striped table-bordered">
-                <caption>Global order stats</caption>
+                <caption>Orders</caption>
                 <tr>
                         <th class="span10">Total orders</th>
                         <td class="span2" >{{ total_orders }}</td>
@@ -90,27 +95,12 @@
                         <td class="span2" >{{ total_revenue|currency }}</td>
                 </tr>
         </table>
-
-        {% if order_status_breakdown %}
-        <table class="table table-striped table-bordered">
-                <caption>Order status breakdown</caption>
-                <tr>
-                        <th class="span10">Status</th>
-                        <th class="span2" >Frequency</th>
-                </tr>
-                {% for dict in order_status_breakdown %}
-                <tr>
-                        <td class="span10"><a href="{% url dashboard:order-list %}?order_status={{ dict.status }}">{{ dict.status }}</a></td>
-                        <td class="span2" >{{ dict.freq }}</td>
-                </tr>
-                {% endfor %}
-        </table>
-        {% endif %}
+		<p><a href="{% url dashboard:order-list %}" class="btn">Manage orders</a></p>
     </div>
 
     <div class="span6">
         <table class="table table-striped table-bordered">
-                <caption>Global stock stats</caption>
+                <caption>Catalogue and stock</caption>
                 <tr>
                         <th class="span10">Total products</th>
                         <td class="span2" >{{ total_products }}</td>
@@ -124,9 +114,11 @@
                         <td class="span2" >{{ total_closed_stock_alerts }}</td>
                 </tr>
         </table>
+		<p><a href="{% url dashboard:catalogue-product-list %}" class="btn">Manage catalogue</a>
+		   <a href="{% url dashboard:stock-alert-list %}" class="btn">View stock alerts</a></p>
 
         <table class="table table-striped table-bordered">
-            <caption>Global offer stats</caption>
+            <caption>Offers and vouchers</caption>
             <tr>
                 <th class="span10">Active <em>Site</em> Offers</th>
                 <td class="span2" >{{ total_site_offers }}</td>
