Corrected bug in session keys for saving objects

--- a/oscar/templates/dashboard/offers/offer_delete.html
+++ b/oscar/templates/dashboard/offers/offer_delete.html
@@ -41,7 +41,7 @@ Delete offer #{{ offer.id }}? | Offer management | {{ block.super }}
 	</table>
 
 	<div class="form-actions">
-		<button class="btn btn-primary" type="submit">Delete</button> or
+		<button class="btn btn-danger" type="submit">Delete</button> or
 		<a href="{% url dashboard:offer-list %}">cancel</a>
 	</div>
 </form>
