Tweaked copy in 500 template

--- a/oscar/templates/500.html
+++ b/oscar/templates/500.html
@@ -33,7 +33,7 @@
 <div class="container">
 	<div class="hero-unit">
 		<h1>HTTP 500 - Internal Server Error!</h1>
-		<p>The page you are looking for isn't here. Please try again, use the navigation above or feel free to send us your feedback. Thank you.</p>
+		<p>Something went terribly wrong.  We're very sorry and will fix this problem as soon as possible.</p>
 		<p>
 			<a class="btn btn-primary btn-large" onClick="javascript:history.go(-1);">Go back to previous page</a>
 		</p>
