--- a/oscar/templates/500.html
+++ b/oscar/templates/500.html
@@ -1,12 +1,9 @@
 {% extends "base.html" %}
+
 {% block extrahead %}
-    {% if product %}
-    <!-- Colorbox for image galleries -->
-    <link rel="stylesheet" href="{{ STATIC_URL }}oscar/js/colorbox/colorbox.css" type="text/css" media="screen" charset="utf-8"/>
-    {% endif %}
-    <!-- Responsive - will need to be minified -->
     <link rel="stylesheet" href="{{ STATIC_URL }}oscar/css/responsive.css" />
 {% endblock %}
+
 {% block layout %}
 <div class="navbar accounts">
 	<div class="navbar-inner">
@@ -32,7 +29,7 @@
 
 <div class="container">
 	<div class="hero-unit">
-		<h1>HTTP 500 - Internal Server Error!</h1>
+		<h1>Internal Server Error!</h1>
 		<p>Something went terribly wrong.  We're very sorry and will fix this problem as soon as possible.</p>
 		<p>
 			<a class="btn btn-primary btn-large" onClick="javascript:history.go(-1);">Go back to previous page</a>
