Added JS datepicker (unstyled) to dashboard forms

--- a/oscar/templates/dashboard/layout.html
+++ b/oscar/templates/dashboard/layout.html
@@ -90,4 +90,5 @@ Dashboard | {{ block.super }}
     <!-- dashboard js -->
     <script src="{{ STATIC_URL }}oscar/js/oscar/dashboard.js" type="text/javascript" charset="utf-8"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.7.1/jquery-ui.min.js"></script>
+	<script type="text/javascript">$(oscar.dashboard.init);</script>
 {% endblock %}
