--- a/oscar/templates/dashboard/reports/index.html
+++ b/oscar/templates/dashboard/reports/index.html
@@ -24,7 +24,7 @@ Reports | {{ block.super }}
 
 {% block dashboard_content %}
 
-<form method="GET" action="{% url dashboard:reports-index %}" class="form-horizontal">
+<form method="get" action="." class="form-horizontal">
     {% include "partials/form_fields.html" with form=form %}
     <div class="form-actions">
         <input type="submit" value="Generate report" class="btn btn-primary" />
