Adding an id to the parent block so that we can link directly to this part of the page from the 'add review' button.

--- a/oscar/templates/reviews/add_review.html
+++ b/oscar/templates/reviews/add_review.html
@@ -1,7 +1,7 @@
 {% extends "catalogue/detail.html" %}
 
 {% block product_review %}
-<div class="review_add">
+<div id="addreview" class="review_add">
     <legend>Leave a product review</legend>
     <form method="post" action="." class="form-inline" >
     
