--- a/oscar/templates/catalogue/detail.html
+++ b/oscar/templates/catalogue/detail.html
@@ -154,7 +154,7 @@
         <p>Read customer reviews on this product. If you have read this book, why not post your own
        review?</p>
        <div class="review_read">
-           <a href="{% url catalogue:reviews-add product.slug product.id %}" class="btn btn-success">Add a review</a>
+           <a href="{% url catalogue:reviews-add product.slug product.id %}#addreview" class="btn btn-success">Add a review</a>
        </div>
 
         {% with product.reviews.all as reviews %}
