General tidyup of the reviews module - it still needs a lot of work.

--- a/oscar/templates/catalogue/detail.html
+++ b/oscar/templates/catalogue/detail.html
@@ -139,7 +139,7 @@
         {% for category in product.categories.all %}
         <li>
             {% for c in category.get_ancestors %}
-            {% if not forloop.first %} > {% endif %}<a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
+            {% if not forloop.first %} &gt; {% endif %}<a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
             {% endfor %}
         </li>
         {% endfor %}
@@ -175,8 +175,8 @@
                             <div class="span4 review_votes">
                                 <div>
                 		            {% include 'reviews/_vote_bit.html' %}
-                                        {% if review.has_votes %}
-                                        <p>{{ review.num_up_votes }} customer{{ review.num_up_votes|pluralize }} found this review helpful.</p>
+									{% if review.has_votes %}
+									<p>{{ review.num_up_votes }} customer{{ review.num_up_votes|pluralize }} found this review helpful.</p>
                                     {% endif %}
                                 </div>
                             </div>
