--- a/oscar/templates/reviews/reviews.html
+++ b/oscar/templates/reviews/reviews.html
@@ -2,9 +2,9 @@
 
 {% block product_review %}
 
-<h3>All Reviews of {{ item.title }}</h3>
+<h3>All Reviews of {{ product.title }}</h3>
 <p>Read customer reviews on this product. If you have read this book, why not post your own review?</p>
-<p><a href="{% url catalogue:reviews-add">Add a review</a></p>
+<p><a href="{% url catalogue:reviews-add product.slug product.id %}" class="btn btn-primary">Add a review</a></p>
 
 {% if reviews %}
 	<h4> Sort by: </h4>
