Tidied checkout templates

--- a/oscar/templates/partials/footer_checkout.html
+++ b/oscar/templates/partials/footer_checkout.html
@@ -1,8 +1,10 @@
 <footer class="footer container-fluid">
     {% block footer %}
+	    {% comment %}
         <ul class="footer_links">
             <li><a href="#terms-and-conditions">Terms and conditions</a></li>
 			<li><a href="#shipping">Shipping</a></li>
         </ul>
+		{% endcomment %}
     {% endblock %}
 </footer>
