--- a/oscar/templates/checkout/shipping_address.html
+++ b/oscar/templates/checkout/shipping_address.html
@@ -17,7 +17,7 @@ Shipping address | {{ block.super }}
     {% if request.user.is_authenticated %}
         {% if addresses %}
             
-            <h4>Choose a shipping address from your address book</h4>
+		<h3>An address from your addressbook?</h3>
       
             <div class="choose-block">
                 <ul class="clearfix">
@@ -31,13 +31,9 @@ Shipping address | {{ block.super }}
 								{% csrf_token %}
 								<input type="hidden" name="action" value="ship_to" />
 								<input type="hidden" name="address_id" value="{{ address.id }}" />
-								<button type="submit" value="Ship to this address" class="btn btn-primary btn-small ship-address">Ship to this address</button>
-							</form>
-
-							<form action="{% url checkout:user-address-delete address.id %}" method="post" class="remove-item">
-								{% csrf_token %}
+								<button type="submit" value="Ship to this address" class="btn btn-primary  ship-address">Ship to this address</button>
 								<a class="btn btn-small btn-info" href="{% url checkout:user-address-update address.id %}">Edit</a>
-								<button type="submit" value="Delete" class="btn btn-small btn-danger">Delete</button>
+								<a href="{% url checkout:user-address-delete address.id %}" class="btn btn-small btn-danger">Delete</a>
 							</form>
 						</div>
 					</li>
@@ -45,7 +41,7 @@ Shipping address | {{ block.super }}
                 </ul>
             </div>
             <div class="sub-header">
-    			<h2>Or</h2>
+			<h3>Or a new address?</h3>
     		</div>
         {% else %}
             <p>Your addressbook is currently empty</p>
