--- a/oscar/templates/checkout/user_address_form.html
+++ b/oscar/templates/checkout/user_address_form.html
@@ -2,20 +2,22 @@
 
 {% block order_contents %}{% endblock %}
 {% block shipping_method %}{% endblock %}
+{% block payment_method %}{% endblock %}
+{% block payment_details %}{% endblock %}
 
 {% block checkout-nav %}
-{% include 'checkout/nav.html' with step=2 %}
+{% include 'checkout/nav.html' with step=1 %}
 {% endblock %}
 
 {% block shipping_address %}
+<h1>Enter an address for your addressbook</h1>
+<p> </p>
     <form action="{{ form_url }}" method="post" class="form-horizontal">
-        <legend>Enter an address for your addressbook</legend>
         {% csrf_token %}
         {% include "partials/form_fields.html" with form=form %}
         <div class="form-actions">
-            <button type="submit" class="btn btn-small btn-primary">Save</button>
+            <button type="submit" class="btn btn-large btn-primary">Save</button>
             or <a href="{% url checkout:shipping-address %}">cancel</a>.
-
         </div>
     </form>
 {% endblock shipping_address %}
