Styles for a basic datepicker

--- a/oscar/static/oscar/less/dashboard/dashboard.less
+++ b/oscar/static/oscar/less/dashboard/dashboard.less
@@ -422,3 +422,19 @@ h3 {
     -khtml-border-radius: 5px;
     border-radius: 5px;
 }
+
+/* date picker */
+#ui-datepicker-div {background:#FFFFFF;width:218px;box-shadow:2px 2px 2px #AAAAAA;}
+    #ui-datepicker-div .ui-datepicker-header {position:relative;padding:5px;text-align:center;background:#dddddd;font-weight:bold;}
+        #ui-datepicker-div .ui-datepicker-prev {position:absolute;top:6px;left:6px;cursor:pointer;}
+        #ui-datepicker-div .ui-datepicker-next {position:absolute;top:6px;right:6px;cursor:pointer;}
+    #ui-datepicker-div table {width:100%;}
+        #ui-datepicker-div th,
+        #ui-datepicker-div td {padding:0px;text-align:center;}
+        #ui-datepicker-div th {padding:4px;}
+        #ui-datepicker-div td a {padding:4px;display:block;}
+        #ui-datepicker-div td .ui-state-highlight {background:#eeeeee;}
+        #ui-datepicker-div td .ui-state-active {color:#FFFFFF;background:#0088CC;}
+
+
+
