Updated content of thank-you page (now includes print link)

--- a/oscar/templates/checkout/thank_you.html
+++ b/oscar/templates/checkout/thank_you.html
@@ -10,9 +10,9 @@ Confirmation of order {{ order.number }} | {{ block.super }}
 
 {% block content %}
 <div class="sub-header">
-    <h1>Order confirmation</h1>
+    <h1>Confirmation for order #{{ order.number }}</h1>
 </div>
-<p>Your order has been placed - your order number is <span class="label label-success">{{order.number}}</span></p>
+<p>Your order has been placed and a confirmation email has ben sent - your order number is <span class="label label-success">{{ order.number }}</span></p>
 <p>Please make a note of this reference or print this page and quote it in any communication
 with us regarding your order.</p>
 
@@ -100,7 +100,9 @@ with us regarding your order.</p>
     <p>You can track the status of your order at the following URL:</p>
     <p><a href="{% url customer:anon-order order.number order.verification_hash %}"> {% url customer:anon-order order.number order.verification_hash %}</a></p>
 {% endif %}
+
 <div class="form-actions">
+    <a onclick="window.print()" href="#" class="btn btn-primary btn-large">Print this page</a>
     <a href="/" class="btn btn-primary btn-large pull-right">Continue shopping</a>
 </div>
 {% endblock content %}
