Updated shipping methods display

--- a/oscar/templates/checkout/checkout.html
+++ b/oscar/templates/checkout/checkout.html
@@ -67,7 +67,7 @@ Checkout | {{ block.super }}
     </div>
     <div class="basket-title">
         <div class="row-fluid">
-            <h4 class="span10">Items Summary</h4>
+            <h4 class="span10">Items in basket</h4>
             <h4 class="span1">Quantity</h4>
             <h4 class="span1">Price</h4>
         </div>
