--- a/oscar/templates/base.html
+++ b/oscar/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html lang="{% block language %}en-gb{% endblock %}">
     <head>
-		<title>{% block title %}{{ shop_name }} - {{ shop_tagline }}{% endblock %}</title>
+		<title>{% if display_version %}[Build {{ version }}] {% endif %}{% block title %}{{ shop_name }} - {{ shop_tagline }}{% endblock %}</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
         <meta name="created" content='{% now "jS M Y h:i" %}' />
         <meta name="description" content="{% block description %}{% endblock %}" />
