Added automatic offer upsell messages.
On the basket page, we check for any offers that your basket partially
meets the condition for, and show a message indicating so.  Later
extension is to link in the offer page within the message.

--- a/oscar/templates/basket/basket.html
+++ b/oscar/templates/basket/basket.html
@@ -27,6 +27,13 @@ Basket | {{ block.super }}
 	{% endfor %}
 {% endif %}
 
+{% if upsell_messages %}
+	<h2>You could be missing out on offers!</h2>
+	{% for upsell in upsell_messages %}
+	<div class="warning">{{ upsell.message }} to quality for the '{{ upsell.offer.name }}' special offer</div>
+	{% endfor %}
+{% endif %}
+
 {% if not basket.is_empty %}
 <div class="basket-title">
     <div class="row-fluid">
