--- a/oscar/templates/catalogue/detail.html
+++ b/oscar/templates/catalogue/detail.html
@@ -29,11 +29,13 @@
 
 {% block content %}
 <article class="product_page"><!-- Start of product page -->
+    {% if user.is_authenticated %}
     <div class="row-fluid">
         <div class="well">
             <a href="{% url dashboard:catalogue-product product.id %}"><button class="btn btn-success" value='Edit this product'>Edit this product</button></a>
         </div>
     </div>
+    {% endif %}
     <div class="row-fluid">
         <div class="span6">
             {% include "catalogue/partials/gallery.html" %}
